--- a/src/pages/Login/styles/login.sass
+++ b/src/pages/Login/styles/login.sass
@@ -245,6 +245,7 @@
             display: flex
             flex-direction: row
             justify-content: space-between
+            margin-top: $m16tab
 
             .sign-in-content, .sign-up-content
                 width: auto
@@ -297,6 +298,14 @@
                                 outline: none
                                 border: 1px solid $primary_gray
 
+                        .email-input-reg
+                            width: clamp( 150px,39.0625vw,600px)
+                            height: clamp(20px,5.208333333333333vw,80px)
+                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                            border: 1px solid $gray
+                            border-radius: 4px
+                            margin-top: $m32tab
+
                         .email-input-error, .password-input-error
                             width: clamp( 150px,39.0625vw,600px)
                             height: clamp(20px,5.208333333333333vw,80px)
@@ -304,6 +313,17 @@
                             border: 1px solid #FF2E00
                             border-radius: 4px
                             margin-top: $m16tab
+                            &:focus
+                                outline: none
+                                border: 1px solid $primary_gray
+
+                        .email-input-error-reg
+                            width: clamp( 150px,39.0625vw,600px)
+                            height: clamp(20px,5.208333333333333vw,80px)
+                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                            border: 1px solid #FF2E00
+                            border-radius: 4px
+                            margin-top: $m32tab
                             &:focus
                                 outline: none
                                 border: 1px solid $primary_gray
@@ -320,6 +340,18 @@
                                 cursor: pointer
                                 top: clamp(12.5px, 3.2552083333333335vw,50px)
                                 right: $m16tab
+                                background-color: transparent
+                                border: none
+
+                                .eye-icon
+                                    color: $gray
+                                    font-size: clamp(8.5px,2.2135416666666665vw,34px)
+
+                            .eye-btn-my
+                                position: absolute
+                                cursor: pointer
+                                top: clamp(12.5px, 3.2552083333333335vw,50px)
+                                right: $m32tab
                                 background-color: transparent
                                 border: none
 
