--- a/src/pages/Login/styles/login.sass
+++ b/src/pages/Login/styles/login.sass
@@ -298,14 +298,6 @@
                                 outline: none
                                 border: 1px solid $primary_gray
 
-                        .email-input-reg
-                            width: clamp( 150px,39.0625vw,600px)
-                            height: clamp(20px,5.208333333333333vw,80px)
-                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
-                            border: 1px solid $gray
-                            border-radius: 4px
-                            margin-top: $m32tab
-
                         .email-input-error, .password-input-error
                             width: clamp( 150px,39.0625vw,600px)
                             height: clamp(20px,5.208333333333333vw,80px)
@@ -317,16 +309,16 @@
                                 outline: none
                                 border: 1px solid $primary_gray
 
-                        .email-input-error-reg
-                            width: clamp( 150px,39.0625vw,600px)
-                            height: clamp(20px,5.208333333333333vw,80px)
-                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
-                            border: 1px solid #FF2E00
-                            border-radius: 4px
-                            margin-top: $m32tab
-                            &:focus
-                                outline: none
-                                border: 1px solid $primary_gray
+                        // .email-input-error-reg
+                        //     width: clamp( 150px,39.0625vw,600px)
+                        //     height: clamp(20px,5.208333333333333vw,80px)
+                        //     padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                        //     border: 1px solid #FF2E00
+                        //     border-radius: 4px
+                        //     margin-top: $m32tab
+                        //     &:focus
+                        //         outline: none
+                        //         border: 1px solid $primary_gray
 
                         .password-show-container
                             position: relative
@@ -367,6 +359,47 @@
                             font-weight: 400
                             line-height: 83.333%
                             margin-top: $m16tab
+
+                    .email-input-container-l-reg
+                        width: 100%
+                        height: auto
+                        display: flex
+                        flex-direction: column
+                        margin-top: $m16tab
+
+                        .label
+                            color: $primary_gray
+                            font-family: Lato
+                            font-size: $font20tab
+                            font-style: normal
+                            font-weight: 400
+                            line-height: normal
+                            margin-top: $m16tab
+
+                            .required
+                                color: $spotlight_red
+
+                        .email-input
+                            width: clamp( 150px,39.0625vw,600px)
+                            height: clamp(20px,5.208333333333333vw,80px)
+                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                            border: 1px solid $gray
+                            border-radius: 4px
+                            margin-top: $m16tab
+                            &:focus
+                                outline: none
+                                border: 1px solid $primary_gray
+
+                        .email-input-error, .password-input-error
+                            width: clamp( 150px,39.0625vw,600px)
+                            height: clamp(20px,5.208333333333333vw,80px)
+                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                            border: 1px solid #FF2E00
+                            border-radius: 4px
+                            margin-top: $m16tab
+                            &:focus
+                                outline: none
+                                border: 1px solid $primary_gray
 
                     .password-input-container
                         margin-top: $m16tab
