--- a/src/pages/ForgotPassword/styles/forgot_password.sass
+++ b/src/pages/ForgotPassword/styles/forgot_password.sass
@@ -27,3 +27,158 @@
         font-weight: 400
         line-height: 162.5%
         margin-top: $m16mob
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+.tablet-content
+
+    .password-heading
+        color: $primary_gray
+        text-align: center
+        font-family: Lato
+        font-size: $font24tab
+        font-style: normal
+        font-weight: 400
+        line-height: normal
+
+    .password-description
+        color: $secondary_text
+        text-align: center
+        font-family: Lato
+        font-size: $font16tab
+        font-style: normal
+        font-weight: 400
+        line-height: 162.5%
+        margin-top: $m16tab
+
+    .form
+
+        .email-input-container-l, .password-input-container
+            width: 100%
+            height: auto
+            display: flex
+            flex-direction: column
+
+            .label
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font20tab
+                font-style: normal
+                font-weight: 400
+                line-height: normal
+                margin-top: $m16tab
+
+                .required
+                    color: $spotlight_red
+
+            .email-input, .password-input
+                width: clamp( 150px,39.0625vw,600px)
+                height: clamp(20px,5.208333333333333vw,80px)
+                padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                border: 1px solid $gray
+                border-radius: 4px
+                margin-top: $m16tab
+                &:focus
+                    outline: none
+                    border: 1px solid $primary_gray
+
+            .email-input-error, .password-input-error
+                width: clamp( 150px,39.0625vw,600px)
+                height: clamp(20px,5.208333333333333vw,80px)
+                padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                border: 1px solid #FF2E00
+                border-radius: 4px
+                margin-top: $m16tab
+                &:focus
+                    outline: none
+                    border: 1px solid $primary_gray
+
+            .error
+                color: #FF2E00
+                font-family: Lato
+                font-size: $font14tab
+                font-style: normal
+                font-weight: 400
+                line-height: 83.333%
+                margin-top: $m16tab
+
+            .password-show-container
+                position: relative
+                width: 100%
+                height: auto
+                flex-direction: row
+                align-items: center
+
+                .eye-btn
+                    position: absolute
+                    cursor: pointer
+                    top: clamp(12.5px, 3.2552083333333335vw,50px)
+                    right: $m16tab
+                    background-color: transparent
+                    border: none
+
+                    .eye-icon
+                        color: $gray
+                        font-size: clamp(8.5px,2.2135416666666665vw,34px)
+
+        .form-button
+            width: 100%
+            height: clamp(28px,7.291666666666667vw,112px)
+            color: $white
+            text-align: center
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font16tab
+            font-style: normal
+            font-weight: 500
+            line-height: 142.857%
+            text-transform: uppercase
+            background-color: $gray
+            border: none
+            border-radius: 4px
+            margin-top: $m32tab
+            transition: 0.3s all
+            &:hover
+                background-color: $gray_dark
+
+        .form-button-active
+            width: 100%
+            height: clamp(28px,7.291666666666667vw,112px)
+            color: $white
+            text-align: center
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font16tab
+            font-style: normal
+            font-weight: 500
+            line-height: 142.857%
+            text-transform: uppercase
+            background-color: $button_blue
+            border: none
+            border-radius: 4px
+            margin-top: $m32tab
+            transition: 0.3s all
+            &:hover
+                background-color: #265BCF
+
+        .text-container
+            width: 100%
+            height: auto
+            text-align: center
+            margin-top: $m16tab
+            .link-text
+                color: $primary_gray
+                font-feature-settings: 'clig' off, 'liga' off
+                font-family: Lato
+                font-size: $font14tab
+                font-style: normal
+                font-weight: 500
+                line-height: 142.857%
+                .sign-up-link
+                    color: $selected
+                    font-size: $font14tab
+                    font-style: normal
+                    font-weight: 900
+                    line-height: 142.857%
+                    text-decoration: none
+                    margin-left: clamp(2px, 0.5208333333333334vw,8px)
