--- a/src/pages/Registration/styles/registration.sass
+++ b/src/pages/Registration/styles/registration.sass
@@ -219,3 +219,5 @@
                     background-color: $button_blue
                 .google-icon
                     margin-right: $m8mob
+
+@media (min-width: 768px) and (max-width: 1024px)
