--- a/src/pages/ForgotPassword/styles/forgot_password.css
+++ b/src/pages/ForgotPassword/styles/forgot_password.css
@@ -26,4 +26,160 @@
   font-weight: 400;
   line-height: 162.5%;
   margin-top: clamp(8px, 3.73824vw, 32px);
+}
+
+.tablet-content .password-heading {
+  color: #262626;
+  text-align: center;
+  font-family: Lato;
+  font-size: clamp(12px, 2.5778732546vw, 48px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.tablet-content .password-description {
+  color: #555555;
+  text-align: center;
+  font-family: Lato;
+  font-size: clamp(8px, 1.7185821697vw, 32px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 162.5%;
+  margin-top: clamp(8px, 1.7185821697vw, 32px);
+}
+.tablet-content .form .email-input-container-l, .tablet-content .form .password-input-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+.tablet-content .form .email-input-container-l .label, .tablet-content .form .password-input-container .label {
+  color: #262626;
+  font-family: Lato;
+  font-size: clamp(10px, 2.1482277121vw, 40px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: clamp(8px, 1.7185821697vw, 32px);
+}
+.tablet-content .form .email-input-container-l .label .required, .tablet-content .form .password-input-container .label .required {
+  color: #BF2E3B;
+}
+.tablet-content .form .email-input-container-l .email-input, .tablet-content .form .email-input-container-l .password-input, .tablet-content .form .password-input-container .email-input, .tablet-content .form .password-input-container .password-input {
+  width: clamp(150px, 39.0625vw, 600px);
+  height: clamp(20px, 5.2083333333vw, 80px);
+  padding-left: clamp(5px, 1.3020833333vw, 20px);
+  border: 1px solid #C4C4C4;
+  border-radius: 4px;
+  margin-top: clamp(8px, 1.7185821697vw, 32px);
+}
+.tablet-content .form .email-input-container-l .email-input:focus, .tablet-content .form .email-input-container-l .password-input:focus, .tablet-content .form .password-input-container .email-input:focus, .tablet-content .form .password-input-container .password-input:focus {
+  outline: none;
+  border: 1px solid #262626;
+}
+.tablet-content .form .email-input-container-l .email-input-error, .tablet-content .form .email-input-container-l .password-input-error, .tablet-content .form .password-input-container .email-input-error, .tablet-content .form .password-input-container .password-input-error {
+  width: clamp(150px, 39.0625vw, 600px);
+  height: clamp(20px, 5.2083333333vw, 80px);
+  padding-left: clamp(5px, 1.3020833333vw, 20px);
+  border: 1px solid #FF2E00;
+  border-radius: 4px;
+  margin-top: clamp(8px, 1.7185821697vw, 32px);
+}
+.tablet-content .form .email-input-container-l .email-input-error:focus, .tablet-content .form .email-input-container-l .password-input-error:focus, .tablet-content .form .password-input-container .email-input-error:focus, .tablet-content .form .password-input-container .password-input-error:focus {
+  outline: none;
+  border: 1px solid #262626;
+}
+.tablet-content .form .email-input-container-l .error, .tablet-content .form .password-input-container .error {
+  color: #FF2E00;
+  font-family: Lato;
+  font-size: clamp(7px, 1.5037593985vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 83.333%;
+  margin-top: clamp(8px, 1.7185821697vw, 32px);
+}
+.tablet-content .form .email-input-container-l .password-show-container, .tablet-content .form .password-input-container .password-show-container {
+  position: relative;
+  width: 100%;
+  height: auto;
+  flex-direction: row;
+  align-items: center;
+}
+.tablet-content .form .email-input-container-l .password-show-container .eye-btn, .tablet-content .form .password-input-container .password-show-container .eye-btn {
+  position: absolute;
+  cursor: pointer;
+  top: clamp(12.5px, 3.2552083333vw, 50px);
+  right: clamp(8px, 1.7185821697vw, 32px);
+  background-color: transparent;
+  border: none;
+}
+.tablet-content .form .email-input-container-l .password-show-container .eye-btn .eye-icon, .tablet-content .form .password-input-container .password-show-container .eye-btn .eye-icon {
+  color: #C4C4C4;
+  font-size: clamp(8.5px, 2.2135416667vw, 34px);
+}
+.tablet-content .form .form-button {
+  width: 100%;
+  height: clamp(28px, 7.2916666667vw, 112px);
+  color: white;
+  text-align: center;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(8px, 1.7185821697vw, 32px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.857%;
+  text-transform: uppercase;
+  background-color: #C4C4C4;
+  border: none;
+  border-radius: 4px;
+  margin-top: clamp(16px, 3.4371643394vw, 64px);
+  transition: 0.3s all;
+}
+.tablet-content .form .form-button:hover {
+  background-color: #434343;
+}
+.tablet-content .form .form-button-active {
+  width: 100%;
+  height: clamp(28px, 7.2916666667vw, 112px);
+  color: white;
+  text-align: center;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(8px, 1.7185821697vw, 32px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.857%;
+  text-transform: uppercase;
+  background-color: #4172DC;
+  border: none;
+  border-radius: 4px;
+  margin-top: clamp(16px, 3.4371643394vw, 64px);
+  transition: 0.3s all;
+}
+.tablet-content .form .form-button-active:hover {
+  background-color: #265BCF;
+}
+.tablet-content .form .text-container {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin-top: clamp(8px, 1.7185821697vw, 32px);
+}
+.tablet-content .form .text-container .link-text {
+  color: #262626;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(7px, 1.5037593985vw, 28px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.857%;
+}
+.tablet-content .form .text-container .link-text .sign-up-link {
+  color: #FF7A00;
+  font-size: clamp(7px, 1.5037593985vw, 28px);
+  font-style: normal;
+  font-weight: 900;
+  line-height: 142.857%;
+  text-decoration: none;
+  margin-left: clamp(2px, 0.5208333333vw, 8px);
 }/*# sourceMappingURL=forgot_password.css.map */
